--- a/part1/server/java/pom.xml
+++ b/part1/server/java/pom.xml
@@ -37,6 +37,13 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
         
+        <!-- ZeroMQ for Java -->
+        <dependency>
+            <groupId>org.zeromq</groupId>
+            <artifactId>jeromq</artifactId>
+            <version>0.5.4</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
